# http-replay

./: .gitignore  CMakeLists.txt  README.md  Sconstruct  bootstrap.sh
doc/: Doxyfile  conf.py  index.rst  preface.en.rst
doc/code/: EnvironmentSetup.en.rst  ReplayFiles.en.rst
doc/doc/: Doxyfile
doc/doc/code/: EnvironmentSetup.en.rst
doc/doc/ext/: local-config.py
doc/ext/: local.py
json/: 200_4.json  doc.json  example.json
lib/: jansson.part  jemalloc.part  libyaml.part  nghttp2.part  openssl.part
local/include/core/: ArgParser.h  HttpReplay.h  ProxyVerifier.h  YamlTransclude.h  yaml_util.h
local/parts/: http-replay.part  http-replay.rpm.part
local/src/client/: CMakeLists.txt  replay-client.cc  replay-client.part  verifier-client.cc
local/src/core/: ArgParser.cc  CMakeLists.txt  HttpReplay.cc  ProxyVerifier.cc  core.part
local/src/server/: CMakeLists.txt  replay-server.cc  replay-server.part  verifier-server.cc
schema/: replay_format.json
scripts/: list_generator.py  replay_generator.py
test/: example-one.yaml  microdns.json
test/autests/: Pipfile  autest.sh  test-env-check.sh
test/autests/gold_tests/autest-site/: client.test.ext  directive_engine.py  init.cli.ext  proxy.test.ext  proxy_http1.py  proxy_http2.py  server.test.ext  setup.cli.ext  test_proxy.py
test/autests/gold_tests/field_parsing/: parse_yaml.test.py
test/autests/gold_tests/field_verification/: field_verification.test.py
test/autests/gold_tests/http/: http.test.py
test/autests/gold_tests/http2/: http2.test.py
test/autests/gold_tests/https/: https.test.py
test/autests/gold_tests/no_proxy/: no_proxy.test.py
test/unit_tests/: test_HttpReplay.cc  unit_test_main.cc  unit_tests.part
tools/: clang-format.sh
unit_tests/: test_Factory.cc  test_HttpReplay.cc  unit_tests.part
(+21 files in other folders)
